force-app/main/default/objects/zisf__FmcDefaultValue__c/zisf__FmcDefaultValue__c.object-meta.xml
<CustomObject>
    <description>default values for find more contacts part.</description>
    <label>FmcDefaultValue</label>
    <nameField>
        <label>FmcDefaultValue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FmcDefaultValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>