force-app/main/default/objects/zisf__FmcDefaultValue__c/fields/zisf__Job_function__c.field-meta.xml
<CustomField>
    <fullName>zisf__Job_function__c</fullName>
    <label>Job function</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>