force-app/main/default/objects/zisf__FmcDefaultValue__c/fields/zisf__job_title__c.field-meta.xml
<CustomField>
    <fullName>zisf__job_title__c</fullName>
    <label>job title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>