force-app/main/default/objects/zisf__FmcDefaultValue__c/fields/zisf__Location__c.field-meta.xml
<CustomField>
    <fullName>zisf__Location__c</fullName>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>