force-app/main/default/objects/zisf__FmcDefaultValue__c/fields/zisf__LocationTree__c.field-meta.xml
<CustomField>
    <fullName>zisf__LocationTree__c</fullName>
    <label>LocationTree</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>