force-app/main/default/objects/zisf__FmcDefaultValue__c/fields/zisf__Management_Level__c.field-meta.xml
<CustomField>
    <fullName>zisf__Management_Level__c</fullName>
    <label>Management Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>